Task8/k8s/cifar10-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cifar10-service
spec:
  selector:
    app: cifar10
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
