Task8/k8s/cifar10-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cifar10-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cifar10-service
                port:
                  number: 80
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: cifar10-service
                port:
                  number: 80
